--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,9 @@ on:
     branches:
       - main
     paths-ignore:
+      - "*.png"
       - "*.md"
+  workflow_dispatch:
 
 permissions:
   pull-requests: write
